launchpad-buildd (166) UNRELEASED; urgency=medium

  [ Colin Watson ]
  * Run all tests at package build time, not just those in lpbuildd.tests.

  [ Tobias Koch ]
  * Update LXD backend to work with LXD 3.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 25 Oct 2018 10:03:14 +0100

launchpad-buildd (165) xenial; urgency=medium

  [ Steve Langasek, Tobias Koch ]
  * buildlivefs: support passing an IMAGE_TARGETS variable into the
    environment, for projects (i.e., ubuntu-cpc) that produce multiple
    images as part of a single build, in order to be selective about what
    builds to run.

  [ Colin Watson ]
  * Set SNAPCRAFT_BUILD_ENVIRONMENT=host when building snaps (LP: #1791201).
  * Call gatherResults in a different thread so that it doesn't block
    responses to XML-RPC requests (LP: #1795877).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 19 Oct 2018 08:10:22 +0100

launchpad-buildd (164) xenial; urgency=medium

  * Configure snap proxy settings for Subversion (LP: #1668358).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 16 Aug 2018 16:32:41 +0100

launchpad-buildd (163) xenial; urgency=medium

  * Revert change to tolerate chroot tarballs with a top-level directory
    other than chroot-autobuild/; this breaks symlink unpacking.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 13 Jun 2018 00:23:35 +0100

launchpad-buildd (162) xenial; urgency=medium

  * Set the hostname and FQDN of LXD containers to match the host system,
    though with an IP address pointing to the container (LP: #1747015).
  * Tolerate chroot tarballs with a top-level directory other than
    chroot-autobuild/.
  * If the extra build arguments include fast_cleanup: True, then skip the
    final cleanup steps of the build.  This can be used when building in a
    VM that is guaranteed to be torn down after the build.
  * Refactor VCS operations from lpbuildd.target.build_snap out to a module
    that can be used by other targets.