@@ -53,6 +53,9 @@ class BuildLiveFS(Operation):
             action="append", metavar="TARGET",
             help="produce image for TARGET")
         parser.add_argument(
+            "--cohort-key", dest="cohort_key", metavar="COHORT_KEY",
+            help="use COHORT_KEY during snap downloads")
+        parser.add_argument(
             "--proposed", default=False, action="store_true",
             help="enable use of -proposed pocket")
         parser.add_argument(
@@ -131,6 +134,8 @@ class BuildLiveFS(Operation):
             if self.args.image_targets:
                 base_lb_env["IMAGE_TARGETS"] = " ".join(
                     self.args.image_targets)
+            if self.args.cohort_key:
+                base_lb_env["COHORT_KEY"] = self.args.cohort_key
             lb_env = base_lb_env.copy()
             lb_env["SUITE"] = self.args.series
             if self.args.datestamp is not None:
